<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashboardFragment">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:text="@string/hello"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cheerup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:text="@string/let_s_get_to_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings" />


    <androidx.cardview.widget.CardView
        android:id="@+id/station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/cheerup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_station_name"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/baseline_ev_station_24"
                app:drawableTint="@color/teal_700" />

                <TextView
                    android:id="@+id/unsynced_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="?attr/colorError"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/baseline_running_with_errors_24"
                    android:text="5 unsynced requests" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/attendant_totals"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@id/station_totals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/station_name">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/done_by_you"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="4dp"
                android:text="9"
                android:textSize="36sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/station_totals"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/attendant_totals"
        app:layout_constraintTop_toBottomOf="@id/station_name">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/total_today"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="4dp"
                android:text="31"
                android:textSize="36sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/station_totals">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/swap"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/available_swaps"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23"
                android:textColor="#24ba10"
                android:textSize="64sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>